<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dvrk_python</name>
  <version>2.2.1</version>
  <description>dVRK Python client for ROS2</description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
